--- a/main.css
+++ b/main.css
@@ -8,8 +8,17 @@ h1 {
 }
 
 .sector-dropdown, .firm-age-dropdown {
-	width: 120px;
+	width: 220px;
+	height: 50px;
+	background-color: blue;
+	color: white;
+	border: solid 2px blue;
+	box-shadow: 3px 3px 2px black;
+	font-size: 20px;
+	font-style: italic;
 }
+
+
 
 body {
 	background-color: green;
@@ -27,10 +36,6 @@ select {
 	text-align: center;
 }
 
-.sector-dropdown, .firm-age-dropdown {
-	width: 250px;
-}
-
 .submit-button {
 	margin-top: 50px;
 }
@@ -39,6 +44,9 @@ button {
 	border-radius: 4px;
 	width: 100px;
 	height: 50px;
+	background-color: orange;
+	border: solid 2px orange;
+	box-shadow: 3px 3px 2px black;
 }
 
 .results-paragraph {
