--- a/main.css
+++ b/main.css
@@ -16,9 +16,13 @@ h1 {
 	box-shadow: 3px 3px 2px black;
 	font-size: 20px;
 	font-style: italic;
+	border-radius: 4px;
 }
 
-
+.sector-dropdown:hover, .firm-age-dropdown:hover {
+	background-color: orange;
+	border: 4px solid orange;
+}
 
 body {
 	background-color: green;
@@ -44,13 +48,17 @@ button {
 	border-radius: 4px;
 	width: 100px;
 	height: 50px;
-	background-color: orange;
-	border: solid 2px orange;
+	background-color: white;
 	box-shadow: 3px 3px 2px black;
+}
+
+button:hover {
+	background-color: orange;
+	border: 4px solid orange;
 }
 
 .results-paragraph {
 	font-size: 25px;
 	margin-top: 170px;
-	color: blue;
+	color: white;
 }
